src/objects/QPMS__DocumentJunction__c.object
<CustomObject>
    <description>This is junction object. It stores the document profile junction records.</description>
    <fields>
        <fullName>QPMS__Access_Level__c</fullName>
        <description>To determine the access level of entity on this record</description>
        <inlineHelpText>To determine the access level of entity on this record</inlineHelpText>
        <label>Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Age__c</fullName>
        <description>This field store the age of the field</description>
        <formula>TODAY()  -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Asset_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset Profile</description>
        <inlineHelpText>Asset Profile</inlineHelpText>
        <label>Asset Profile</label>
        <referenceTo>QPMS__Asset_Profile__c</referenceTo>
        <relationshipLabel>DocumentJunctions</relationshipLabel>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used In Reference between Audit Program and Document</description>
        <label>Audit Program</label>
        <referenceTo>QPMS__Audit_Program__c</referenceTo>
        <relationshipLabel>DocumentJunctions</relationshipLabel>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used In Reference between Audit and Document</description>
        <label>Audit</label>
        <referenceTo>QPMS__Audit__c</referenceTo>
        <relationshipLabel>DocumentJunctions</relationshipLabel>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA</label>
        <referenceTo>QPMS__CAPA__c</referenceTo>
        <relationshipLabel>DocumentJunctions</relationshipLabel>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CRName__c</fullName>
        <formula>QPMS__Change_Management__r.QPMS__CR_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_ManagementChild__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change ManagementChild</label>
        <referenceTo>QPMS__Change_Management__c</referenceTo>
        <relationshipLabel>DocumentJunctions (Change ManagementChild)</relationshipLabel>
        <relationshipName>DocumentJunctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Management</label>
        <referenceTo>QPMS__Change_Management__c</referenceTo>
        <relationshipLabel>DocumentJunctions</relationshipLabel>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Child_Owner__c</fullName>
        <formula>IF( NOT(ISBLANK(QPMS__DocumentChild__c)) , QPMS__DocumentChild__r.Owner:User.FirstName+&apos; &apos;+ QPMS__DocumentChild__r.Owner:User.LastName , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Child_Revision__c</fullName>
        <formula>IF( NOT( ISBLANK( QPMS__DocumentChild__c ) ) ,  QPMS__DocumentChild__r.QPMS__Current_Rev__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Revision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Child_Status__c</fullName>
        <formula>IF(NOT(ISBLANK(QPMS__DocumentChild__c)) , TEXT(QPMS__DocumentChild__r.QPMS__Status__c),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Child_Title__c</fullName>
        <formula>IF( NOT( ISBLANK(  QPMS__DocumentChild__c  ) ) , QPMS__DocumentChild__r.QPMS__Title__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CompletedBy__c</fullName>
        <formula>$User.FirstName +&apos; &apos;+  $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CompletedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_Date__c</fullName>
        <description>this  field store the completed date of the document junction</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Completion_Period__c</fullName>
        <description>This filed stores the Completion Period in document jumction</description>
        <label>Completion Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Course</description>
        <inlineHelpText>Course</inlineHelpText>
        <label>Course</label>
        <referenceTo>QPMS__Course__c</referenceTo>
        <relationshipLabel>DocumentJunctions</relationshipLabel>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Current_Rev__c</fullName>
        <formula>IF( NOT( ISBLANK( QPMS__DocumentParent__c ) ) , QPMS__DocumentParent__r.QPMS__Current_Rev__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Rev</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Doc_Status__c</fullName>
        <description>This filed stores the document view value</description>
        <label>Doc Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Viewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Doc_Training_Status__c</fullName>
        <label>Doc Training Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Refresher</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Inprogress</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__DocumentChild__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocumentChild</label>
        <referenceTo>QPMS__Document_Profile__c</referenceTo>
        <relationshipLabel>DocumentJunctions</relationshipLabel>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__DocumentName__c</fullName>
        <formula>QPMS__DocumentParent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DocumentName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__DocumentParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocumentParent</label>
        <referenceTo>QPMS__Document_Profile__c</referenceTo>
        <relationshipLabel>DocumentJunctions (DocumentParent)</relationshipLabel>
        <relationshipName>DocumentJunctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Read_and_sign_of_number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>this field stores Refresher_Period_Days__c</description>
        <label>Document Read and sign of number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Refresher_Advance_Date__c</fullName>
        <formula>QPMS__Start_Date__c  -  QPMS__DocumentParent__r.QPMS__Refresher_Advance_Notice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Refresher Advance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Type</label>
        <referenceTo>QPMS__Document_Type__c</referenceTo>
        <relationshipLabel>DocumentJunctions</relationshipLabel>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__DueDate__c</fullName>
        <formula>if(
    if( ISNULL( QPMS__DocumentParent__r.QPMS__Pre_Release_Duration_Date__c ), QPMS__DocumentParent__r.QPMS__Effective_Date__c , QPMS__DocumentParent__r.QPMS__Pre_Release_Duration_Date__c ) &gt; DATEVALUE(CreatedDate),
    if( ISNULL( QPMS__DocumentParent__r.QPMS__Pre_Release_Duration_Date__c ), QPMS__DocumentParent__r.QPMS__Effective_Date__c , QPMS__DocumentParent__r.QPMS__Pre_Release_Duration_Date__c ),
    DATEVALUE(CreatedDate)
)

+ if( ISNULL(QPMS__DocumentParent__r.QPMS__Grace_Days_for__c),0,QPMS__DocumentParent__r.QPMS__Grace_Days_for__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <description>This filed stores the due date of document juction</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Group_Id__c</fullName>
        <label>Group Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Indexed_Type__c</fullName>
        <description>Indexed_Type__c</description>
        <externalId>true</externalId>
        <label>Indexed Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_From_group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This filestore if that record is from user cgroup or not</description>
        <label>Is From group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>DocumentJunctions</relationshipLabel>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__NC_Type__c</fullName>
        <formula>IF(NOT(ISBLANK( QPMS__Non_Conformance__c  )),  TEXT(QPMS__Non_Conformance__r.QPMS__NC_Type__c) , &apos;&apos;  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NC Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Conformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-Conformance</label>
        <referenceTo>QPMS__Non_Conformance__c</referenceTo>
        <relationshipLabel>DocumentJunctions</relationshipLabel>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Observation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used In Reference between Observation Program and Document</description>
        <label>Observation</label>
        <referenceTo>QPMS__Observation__c</referenceTo>
        <relationshipLabel>DocumentJunctions</relationshipLabel>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner__c</fullName>
        <formula>IF(NOT(ISBLANK( QPMS__Non_Conformance__c)),   QPMS__Non_Conformance__r.Owner:User.FirstName+&apos; &apos;+ QPMS__Non_Conformance__r.Owner:User.LastName    ,   QPMS__CAPA__r.Owner:User.FirstName+&apos; &apos;+ QPMS__CAPA__r.Owner:User.LastName  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Owner__c</fullName>
        <formula>IF( NOT(ISBLANK(QPMS__DocumentParent__c)) , QPMS__DocumentParent__r.Owner:User.FirstName+&apos; &apos;+ QPMS__DocumentParent__r.Owner:User.LastName ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Status__c</fullName>
        <formula>IF(NOT(ISBLANK(QPMS__DocumentParent__c)) , TEXT(QPMS__DocumentParent__r.QPMS__Status__c),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Title__c</fullName>
        <formula>IF( NOT( ISBLANK( QPMS__DocumentParent__c ) ) , QPMS__DocumentParent__r.QPMS__Title__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Reference__c</fullName>
        <formula>IF(NOT(ISBLANK( QPMS__Non_Conformance__c )), ( QPMS__Non_Conformance__r.QPMS__Non_Conformance_Name__c ) , IF(NOT(ISBLANK(  QPMS__CAPA__c )), (  QPMS__CAPA__r.QPMS__CAPA_Name__c  ) , IF(NOT(ISBLANK(  QPMS__Audit__c  )), (  QPMS__Audit__r.Name ) ,IF(NOT(ISBLANK( QPMS__Asset_Profile__c )), ( QPMS__Asset_Profile__r.QPMS__Asset_Code__c),
IF(NOT(ISBLANK(  QPMS__DocumentChild__c  )), (  QPMS__DocumentChild__r.Name  ) , IF(NOT(ISBLANK(  QPMS__DocumentParent__c  )), (  QPMS__DocumentParent__r.Name  ) , IF(NOT(ISBLANK(  QPMS__Change_Management__c  )), ( QPMS__Change_ManagementChild__r.QPMS__CR_Name__c) , &apos;&apos; ) ) ) ) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Refresher_Advance_Notice_Days__c</fullName>
        <description>This filed stores  Refresher Advance Notice(Days)</description>
        <label>Refresher Advance Notice(Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Refresher_Date__c</fullName>
        <label>Refresher Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Refresher_Period_Days__c</fullName>
        <description>This filed is used to save Refresher Period (Days)</description>
        <label>Refresher Period (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__RelationWithChildForDisplay__c</fullName>
        <formula>IF( QPMS__RelationWithParent__c== &apos;Master&apos;, $Label.qpms__document_doc_reference_sub_document , IF(QPMS__RelationWithParent__c == &apos;Sub Document&apos;, $Label.qpms__document_doc_reference_master , IF(QPMS__RelationWithParent__c == &apos;Related&apos;, $Label.qpms__document_doc_references_related , &apos;&apos;) ) )</formula>
        <label>RelationWithChildForDisplay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__RelationWithChild__c</fullName>
        <formula>IF( QPMS__RelationWithParent__c== &apos;Master&apos;, &apos;Sub Document&apos;,  IF(QPMS__RelationWithParent__c == &apos;Sub Document&apos;, &apos;Master&apos;,  IF(QPMS__RelationWithParent__c == &apos;Related&apos;, &apos;Related&apos; , &apos;&apos;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RelationWithChild</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__RelationWithParentForDisplay__c</fullName>
        <formula>IF( QPMS__RelationWithParent__c== &apos;Master&apos;, $Label.qpms__document_doc_reference_master , IF(QPMS__RelationWithParent__c == &apos;Sub Document&apos;, $Label.qpms__document_doc_reference_sub_document , IF(QPMS__RelationWithParent__c == &apos;Related&apos;, $Label.qpms__document_doc_references_related , &apos;&apos;) ) )</formula>
        <label>RelationWithParentForDisplay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__RelationWithParent__c</fullName>
        <label>RelationWithParent</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <label>Signed Off Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Source__c</fullName>
        <formula>IF( NOT( ISBLANK( QPMS__Non_Conformance__c ) ) ,  TEXT(QPMS__Non_Conformance__r.QPMS__NC_Source__c) ,  IF(NOT( ISBLANK(  QPMS__CAPA__c ) ),  TEXT( QPMS__CAPA__r.QPMS__CAPA_Source__c ),&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Start_Date__c</fullName>
        <description>This field stores start date of straining junction</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <formula>IF(NOT(ISBLANK( QPMS__Non_Conformance__c)),  TEXT(QPMS__Non_Conformance__r.QPMS__NC_Status__c) , TEXT( QPMS__CAPA__r.QPMS__CAPA_Status__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <formula>IF( NOT( ISBLANK( QPMS__CAPA__c ) ) ,  QPMS__CAPA__r.QPMS__Title__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type_Of_Document__c</fullName>
        <label>Type Of Document</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revision</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                    <default>true</default>
                    <label>Reference</label>
                </value>
                <value>
                    <fullName>Temporary Revision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Follow</fullName>
                </value>
                <value>
                    <fullName>DocumentTraining</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DocumentJunction</label>
    <nameField>
        <displayFormat>DJ-{00000}</displayFormat>
        <label>DocumentJunction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocumentJunctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>